# dev-sim

./: .env.example  .gitignore  CURRENT_PROGESS.md  README.md  audio_integration.md  description.md  developer.md  file-structure.md  github.js  install.sh  orchestrate.py  persona-generation.md  plan.py  pr-workflow.md  pyproject.toml  render.js  repo-registry.example.json  run.py  run_api.py
.dev-sim/: company-state.json
dev_sim_bridge/: __init__.py  __main__.py  pipeline.py  server.py
docs/: CURRENT_PROGESS.md  personality.md  plan.md.docx
economy-dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
economy-dashboard/src/: App.tsx  index.css
frontend/: build.sh  designer.md  file-structure.md  index.html  install.sh  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  (+1 more)
js/: build.sh  createCanvasContext.js  createRenderLoop.js  events.js  index.html  llm.js  orchestrator.js  package.json  personas.js  portrait.js  store.js  templates.js
llm/: planning_prompt.md  task_splitter.md
personas/: README.md  alex-hsu.json  casey-ng.json  chen-wei-backend.json  elliott-vance.json  generate_persona.py  jamie-flores.json  jordan-ortiz.json  lin-vasquez.json  manifest.json  maya-chen.json  morgan-reyes.json  nova-patel.json  priya-nair.json  riley-kim.json  sam-okonkwo.json  taylor-brooks.json  trait_pools.json  wei-zhang-sa.json
prompts/: README.md  commits.md
schemas/: agent.schema.json  agent.schema.v2.json
shared/: __init__.py  review_schema.py
tools/: k2_tools.py
web/: index.html  package-lock.json
(+101 files in other folders)
